--- a/tp3.tex
+++ b/tp3.tex
@@ -430,11 +430,11 @@ inmediatamente después del depósito en el periodo.
       y_{[n]} &= x_{[n]} \cdot \frac{1-r^{n+1}}{1-r}\\
       y_{[48]} &= x_{[48]} \cdot \frac{1-r^{48+1}}{1-r}
     \end{align*}
-    Suponiendo un $r=1{,}1$ el saldo resultaría:
+    Suponiendo un $r=1.1$ el saldo resultaría:
     \begin{align*}
-      y_{[48]} &= x_{[48]} \cdot \frac{1-(1,1)^{48+1}}{1-1,1}\\
-      y_{[48]} &= 10 \cdot \frac{1-(1,1)^{49}}{-0,1}\\
-      y_{[48]} &= 10.571,89
+      y_{[48]} &= x_{[48]} \cdot \frac{1-(1.1)^{48+1}}{1-1.1}\\
+      y_{[48]} &= 10 \cdot \frac{1-(1.1)^{49}}{-0.1}\\
+      y_{[48]} &= 10.571.89
     \end{align*}
 \end{enumerate}
 
@@ -626,8 +626,8 @@ Considerar la siguiente secuencia periódica en tiempo discreto y aplicar la Ser
         \begin{align*}
           |a_k| =
           \begin{cases}
-            1{,}8\overline{3} &k = 3m, \hspace{1cm} m \in \mathbb{Z}\\
-            1{,}\overline{3} &k = 3m+1, \hspace{3mm} m \in \mathbb{Z}
+            1.8\overline{3} &k = 3m, \hspace{1cm} m \in \mathbb{Z}\\
+            1.\overline{3} &k = 3m+1, \hspace{3mm} m \in \mathbb{Z}
           \end{cases}
         \end{align*}
         \includegraphics[width=1\textwidth]{./images/ej5.1.png}
